# newt_builtin

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile.am  README  configure.ac  function.org  gen_header.sh  libs  make.libbash  requirements.txt  todo.org  tutorial.md  whiptail.sh
.github/: copilot-instructions.md
bash_builtin_gen/: __init__.py  __main__.py  testWrapperGenerator.py  test_wrapper_generator.py  wrapper_generator.py
bash_test/: drawRootText.sh  entry.sh  form.sh  getsize.sh  helpline.sh  label.sh  test.c.sh  test_add_destroy_callback.sh  testkeyfunc.sh  tutorial_2_6.sh  tutorial_4_4.sh  tutorial_4_6.sh  windows.sh
docs/: notes.md
docs/html/: tutorial-1.html  tutorial-3.html
examples/: colors_demo.sh  components_demo.sh  drawRootText.sh  entry.sh  form.sh  getsize.sh  label.sh  logtail.sh  peanuts.sh  popcorn.sh  progress.sh  setcolors.sh  setsuspendcallback.sh  test.c.sh  test_add_destroy_callback.sh  testkeyfunc.sh  tutorial_4_10.sh  tutorial_4_4.sh  tutorial_4_6.sh  tutorial_4_8.sh  whiptail_checklist.sh  whiptail_gauge.sh  whiptail_input.sh  whiptail_menu.sh  whiptail_msgbox.sh  windows.sh
functional_test/: COVERAGE_GAPS.md  README.md  conftest.py  pyproject.toml  test_button.py  test_checkbox.py  test_checkboxtree.py  test_component.py  test_constants.py  test_drawroottext.py  test_entry.py  test_form.py  test_getscreensize.py  test_grid.py  test_helpline.py  test_label.py  test_listbox.py  test_radiobutton.py  test_scale.py  test_setcolors.py  test_setsuspendcallback.py  test_textbox.py  test_whiptail.py  test_windialog.py  test_window.py
html/: tutorial-1.html  tutorial-2.html  tutorial-3.html  tutorial-4.html  tutorial.html
src/: CMakeLists.txt  Makefile.am  bash_builtin_utils.c  bash_builtin_utils.h  bash_includes.h  bash_newt_c.tpl  bash_newt_h.tpl  bash_newt_types.c  bash_newt_types.h  bash_to_c.c  bash_to_c.h  bash_to_c_types.h  dispatch.c  dispatch.h  entry.c  form.c  libnewt.c  libnewt.h  newt.c  newt.cpp  newt_arg_parser.hpp  newt_constants.cpp  newt_constants.hpp  newt_init_guard.hpp  newt_wrappers.cpp  newt_wrappers.hpp  type_conversion.c  type_conversion.h  utils.c  utils.h
support/: extract_flags.sh  extract_newt_h  make_wrapper.sh
templates/: bash_newt_c.tpl  bash_newt_h.tpl  default_macros.tpl  special_cases.tpl
test/: CMakeLists.txt  bash_builtin_utils.c  bash_newt.c  bash_newt_types.c  bash_to_c.c  dispatch.c  test_call_newt.cpp  test_components.cpp  test_from_string.cpp  test_new_wrappers.cpp  test_parse_args.cpp  test_to_bash_string.cpp  test_wrappers.cpp  type_conversion.c
test/stubs/: bash_stubs.hpp  newt_stubs.hpp  word_list_builder.hpp
tests/: drawRootText.sh  entry.sh  form.sh  label.sh  testkeyfunc.sh  tutorial_2_6.sh  tutorial_4_4.sh  windows.sh
utils/: dump_ast.py  missing_wrappers.py  render.py
